--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "ecommerce",
   "version": "1.0.0",
   "description": "Developing an ecommerce website",
-  "main": "script.js",
   "scripts": {
+    "start": "parcel index.html",
     "test": "testing"
   },
   "keywords": [
@@ -13,11 +13,13 @@
   "author": "Arunpragash A P",
   "license": "ISC",
   "dependencies": {
-    "parcel": "^2.12.0",
+    "bootstrap": "^5.3.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "parcel": "^2.12.0",
     "process": "^0.11.10"
   }
 }
