--- a/package.json
+++ b/package.json
@@ -13,10 +13,9 @@
   "author": "Arunpragash A P",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^5.3.3",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.10.1",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.2"
   },
   "devDependencies": {
     "parcel": "^2.12.0",
