--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Developing an ecommerce website",
   "scripts": {
     "start": "parcel index.html",
+    "build":"parcel build index.html",
     "test": "testing"
   },
   "keywords": [
@@ -15,10 +16,10 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "parcel": "^2.12.0",
     "react-router-dom": "^6.22.2"
   },
   "devDependencies": {
-    "parcel": "^2.12.0",
     "process": "^0.11.10"
   }
 }
