--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "author": "Arunpragash A P",
   "license": "ISC",
   "dependencies": {
-    "parcel": "^2.12.0",
+    "@babel/preset-env": "^7.24.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2"
@@ -22,6 +22,19 @@
   "devDependencies": {
     "@babel/core": "^7.24.0",
     "@babel/preset-react": "^7.23.3",
+    "parcel": "^2.12.0",
     "process": "^0.11.10"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
