--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
   "license": "ISC",
   "dependencies": {
     "@babel/preset-env": "^7.24.0",
+    "@reduxjs/toolkit": "^2.2.1",
+    "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.2"
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.2",
+    "react-toastify": "^10.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
     "@babel/preset-react": "^7.23.3",
+    "buffer": "^6.0.3",
     "parcel": "^2.12.0",
     "process": "^0.11.10"
   },
